--- a/src/app/features/components/repair-sheet/repair-sheet.component.html
+++ b/src/app/features/components/repair-sheet/repair-sheet.component.html
@@ -41,7 +41,7 @@
         ></app-password-manager>
       </div>
 
-      <div style="margin-top: 1rem">
+      <div class="config-toggle-container">
         <button
           matButton="filled"
           class="accent"
