--- a/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
+++ b/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.html
@@ -5,9 +5,11 @@
       (click)="toggleSearch()"
       matIconButton
       [attr.aria-label]="
-        searchVisible ? ('shortcuts.hideSearch' | translate) : ('shortcuts.showSearch' | translate)
+        searchVisible()
+          ? ('shortcuts.hideSearch' | translate)
+          : ('shortcuts.showSearch' | translate)
       "
-      [attr.aria-expanded]="searchVisible"
+      [attr.aria-expanded]="searchVisible()"
     >
       <mat-icon svgIcon="search"></mat-icon>
     </button>
@@ -19,8 +21,8 @@
 
   <!-- Search Box with Animation -->
   <app-search-container
-    [visible]="searchVisible"
-    [searchText]="searchText"
+    [visible]="searchVisible()"
+    [searchText]="searchText()"
     (searchTextChange)="onSearchTextChange($event)"
     [placeholder]="'shortcuts.searchPlaceholder' | translate"
     [ariaLabel]="'shortcuts.ariaSearch' | translate"
@@ -31,7 +33,7 @@
   <div class="modal-content">
     <table
       mat-table
-      [dataSource]="filteredShortcuts"
+      [dataSource]="filteredShortcuts()"
       class="shortcut-table"
       role="table"
       [attr.aria-label]="'shortcuts.ariaList' | translate"
@@ -57,7 +59,7 @@
     </table>
 
     <!-- Empty state when no shortcuts match search -->
-    @if (filteredShortcuts.length === 0 && searchText) {
+    @if (filteredShortcuts().length === 0 && searchText()) {
       <div class="empty-state">
         <mat-icon svgIcon="search"></mat-icon>
         <span>{{ 'shortcuts.noResults.title' | translate }}</span>
