--- a/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.scss
+++ b/src/app/features/modals/settings/keyboard-shortcuts-modal/keyboard-shortcuts-modal.component.scss
@@ -22,6 +22,10 @@
 
         &:hover {
           background: var(--hover-bg-color);
+
+          .key {
+            animation: keyPress 0.2s ease-out;
+          }
         }
       }
 
@@ -98,13 +102,6 @@
       color: var(--dim-color);
       font-weight: 400;
     }
-  }
-}
-
-// Row hover animation
-.shortcut-table .mat-mdc-row {
-  &:hover .key {
-    animation: keyPress 0.2s ease-out;
   }
 }
 
